--- a/cvd_detaction/browser_test/index.html
+++ b/cvd_detaction/browser_test/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>12 Input Form with ONNX Model and Min-Max Scaling</title>
+    <title>11 Input Form with ONNX Model and Min-Max Scaling</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -30,21 +30,20 @@
     <script src="https://cdn.jsdelivr.net/npm/onnxjs/dist/onnx.min.js"></script>
 </head>
 <body>
-    <h1>Enter 12 Values for Prediction</h1>
+    <h1>Enter 11 Values for Prediction</h1>
     <form id="inputForm">
         <div>
-            <input type="number" id="input1" placeholder="Gender (1/F, 2/M)" required>
-            <input type="number" id="input2" placeholder="Cardio (0/1)" required>
-            <input type="number" id="input3" placeholder="Age (days)" required>
-            <input type="number" id="input4" placeholder="Height (cm)" required>
-            <input type="number" id="input5" placeholder="Weight (kg)" required>
-            <input type="number" id="input6" placeholder="AP Hi (Systolic BP)" required>
-            <input type="number" id="input7" placeholder="AP Lo (Diastolic BP)" required>
-            <input type="number" id="input8" placeholder="Cholesterol (1/2/3)" required>
-            <input type="number" id="input9" placeholder="Glucose (1/2/3)" required>
-            <input type="number" id="input10" placeholder="Smoke (0/1)" required>
-            <input type="number" id="input11" placeholder="Alcohol (0/1)" required>
-            <input type="number" id="input12" placeholder="Active (0/1)" required>
+            <input type="number" id="input1" placeholder="Age (days)" required>
+            <input type="number" id="input2" placeholder="Gender (1/F, 2/M)" required>
+            <input type="number" id="input3" placeholder="Height (cm)" required>
+            <input type="number" id="input4" placeholder="Weight (kg)" required>
+            <input type="number" id="input5" placeholder="AP Hi (Systolic BP)" required>
+            <input type="number" id="input6" placeholder="AP Lo (Diastolic BP)" required>
+            <input type="number" id="input7" placeholder="Cholesterol (1/2/3)" required>
+            <input type="number" id="input8" placeholder="Glucose (1/2/3)" required>
+            <input type="number" id="input9" placeholder="Smoke (0/1)" required>
+            <input type="number" id="input10" placeholder="Alcohol (0/1)" required>
+            <input type="number" id="input11" placeholder="Active (0/1)" required>
         </div>
         <button type="submit">Submit</button>
     </form>
@@ -57,6 +56,14 @@
         const resultDiv = document.getElementById('result');
         const loadingMessage = document.getElementById('loadingMessage');
 
+        // Function to find the index of the highest value in the output (for classification purposes)
+        function argmax(array) {
+            return array.reduce((maxIndex, value, index, arr) => {
+                return value > arr[maxIndex] ? index : maxIndex;
+            }, 0);
+        }
+
+        // Function to run the model with the normalized inputs
         async function runModel(inputs) {
             try {
                 // Show the loading message
@@ -65,10 +72,10 @@
 
                 // Load ONNX model
                 const session = new onnx.InferenceSession();
-                await session.loadModel('./model.onnx');
+                await session.loadModel('./final_model.onnx');
 
-                // Prepare the input tensor (1, 12)
-                const inputTensor = new onnx.Tensor(new Float32Array(inputs), 'float32', [1, 12]);
+                // Prepare the input tensor (1, 11)
+                const inputTensor = new onnx.Tensor(new Float32Array(inputs), 'float32', [1, 11]);
 
                 // Run inference
                 const outputMap = await session.run([inputTensor]);
@@ -77,8 +84,14 @@
                 // Hide the loading message
                 loadingMessage.style.display = "none";
 
-                // Display the output
-                resultDiv.textContent = `Prediction Output: ${Array.from(outputData).join(", ")}`;
+                // Perform `argmax` to get the predicted class
+                const predictedClass = argmax(outputData);
+
+                // Display the predicted class and the output values
+                resultDiv.innerHTML = `
+                    <p><strong>Prediction Output:</strong> ${Array.from(outputData).join(", ")}</p>
+                    <p><strong>Predicted Class:</strong> ${predictedClass}</p>
+                `;
             } catch (error) {
                 loadingMessage.style.display = "none";
                 resultDiv.textContent = "An error occurred during prediction.";
@@ -86,20 +99,21 @@
             }
         }
 
+        // Min-Max scaling logic
         form.addEventListener('submit', (event) => {
             event.preventDefault(); // Prevent form from refreshing the page
 
-            // Min-Max scaler parameters
-            const minValues = [10798.0, 55.0, 11.0, 90.0, 60.0, 1.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0]; // Add all 12 min values
-            const scaleValues = [12915.0, 195.0, 189.0, 90.0, 60.0, 2.0, 2.0, 1.0, 1.0, 1.0, 1.0, 1.0]; // Add all 12 scale values
+            // Min-Max scaler parameters (from Python)
+            const minValues =  [10798.0, 1.0, 55.0, 11.0, 90.0, 60.0, 1.0, 1.0, 0.0, 0.0, 0.0]; // Replace with your actual min values
+            const scaleValues = [12915.0, 1.0, 195.0, 189.0, 90.0, 60.0, 2.0, 2.0, 1.0, 1.0, 1.0]; // Replace with your actual scale values
 
             // Collect the input values from the form
             const inputs = [];
-            for (let i = 1; i <= 12; i++) {
+            for (let i = 1; i <= 11; i++) {
                 const inputField = document.getElementById(`input${i}`);
                 const inputValue = parseFloat(inputField.value); // Convert input to Float
 
-                // Normalize the input using the Min-Max scaling formula
+                // Apply Min-Max scaling formula
                 const normalizedValue = (inputValue - minValues[i - 1]) / scaleValues[i - 1];
                 inputs.push(normalizedValue);
             }
@@ -109,7 +123,6 @@
             // Run the model with the normalized inputs
             runModel(inputs);
         });
-
     </script>
 </body>
 </html>
